[package]
name = "diesel_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.7"
log = "0.4"
dotenv = "0.15.0"
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "chrono", "uuidv07"] }
r2d2 = "0.8.9"
chrono = { version = "0.4.15", features = ["serde"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }

rust-crypto = "0.2.36"
base64 = "0.13.0"
# Old
#diesel = { version = "1.4.4", features = ["postgres", "uuidv07"] }
#dotenv = "0.15.0"
#serde = "=1.0.105"
#uuid = { version = "=0.8.2", features = ["serde", "v4"] }
